--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -1,16 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameViewController">
+<AnchorPane prefHeight="400.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameViewController">
    <children>
-      <Label layoutX="86.0" layoutY="190.0" text="Now you can start to build the GUI and implement an awesome game">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
+      <BorderPane layoutX="191.0" layoutY="100.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <bottom>
+            <VBox prefHeight="103.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Line endX="600.0" startX="-100.0">
+                     <VBox.margin>
+                        <Insets bottom="5.0" top="5.0" />
+                     </VBox.margin>
+                  </Line>
+                  <HBox alignment="CENTER" prefHeight="99.0" prefWidth="600.0">
+                     <children>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff1f1f" height="100.0" stroke="BLACK" strokeType="INSIDE" width="100.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="100.0" stroke="BLACK" strokeType="INSIDE" width="100.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fff5c" height="100.0" stroke="BLACK" strokeType="INSIDE" width="100.0" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </bottom>
+         <center>
+            <HBox prefHeight="220.0" prefWidth="650.0" BorderPane.alignment="BOTTOM_CENTER">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="217.0" prefWidth="86.0">
+                     <children>
+                        <Label prefHeight="18.0" prefWidth="79.0" text="Player name" />
+                     </children>
+                  </VBox>
+                  <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </ImageView>
+                  <Label contentDisplay="CENTER" prefHeight="18.0" prefWidth="41.0" text="Vs.">
+                     <HBox.margin>
+                        <Insets top="100.0" />
+                     </HBox.margin>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </Label>
+                  <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </ImageView>
+                  <VBox prefHeight="200.0" prefWidth="110.0">
+                     <children>
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="152.0" text="Robot name" textAlignment="CENTER" />
+                        <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@/Pictures/2B.png" />
+                           </image>
+                        </ImageView>
+                        <MFXTextField alignment="TOP_CENTER" prefHeight="67.0" prefWidth="150.0" text="Textbox" />
+                     </children>
+                  </VBox>
+               </children>
+               <BorderPane.margin>
+                  <Insets left="10.0" />
+               </BorderPane.margin>
+            </HBox>
+         </center>
+         <top>
+            <VBox prefHeight="80.0" prefWidth="600.0" BorderPane.alignment="TOP_CENTER">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6383a1" height="50.0" stroke="BLACK" strokeType="INSIDE" width="200.0">
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="250.0" right="250.0" top="10.0" />
+                     </VBox.margin>
+                  </Rectangle>
+                  <Line endX="600.0" startX="-100.0" />
+               </children>
+            </VBox>
+         </top>
+      </BorderPane>
    </children>
 </AnchorPane>
