--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
 
 <AnchorPane prefHeight="400.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameViewController">
    <children>
@@ -25,65 +24,95 @@
                   </Line>
                   <HBox alignment="CENTER" prefHeight="99.0" prefWidth="600.0">
                      <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff1f1f" height="100.0" stroke="BLACK" strokeType="INSIDE" width="100.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="100.0" stroke="BLACK" strokeType="INSIDE" width="100.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1fff5c" height="100.0" stroke="BLACK" strokeType="INSIDE" width="100.0" />
+                        <ImageView fx:id="imageScissorButton" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <HBox.margin>
+                              <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
+                           </HBox.margin>
+                        </ImageView>
+                        <ImageView fx:id="imageRockButton" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <HBox.margin>
+                              <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
+                           </HBox.margin>
+                        </ImageView>
+                        <ImageView fx:id="imagePaperButton" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <HBox.margin>
+                              <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
+                           </HBox.margin>
+                        </ImageView>
                      </children>
                   </HBox>
                </children>
             </VBox>
          </bottom>
          <center>
-            <HBox prefHeight="220.0" prefWidth="650.0" BorderPane.alignment="BOTTOM_CENTER">
+            <HBox prefHeight="218.0" prefWidth="696.0" BorderPane.alignment="CENTER">
                <children>
-                  <VBox alignment="CENTER" prefHeight="217.0" prefWidth="86.0">
+                  <VBox alignment="CENTER" prefHeight="217.0" prefWidth="110.0">
                      <children>
-                        <Label prefHeight="18.0" prefWidth="79.0" text="Player name" />
+                        <Label fx:id="lablePlayerName" prefHeight="18.0" prefWidth="79.0" text="Player name" />
                      </children>
                   </VBox>
-                  <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="pictureActiveRPCPlayer" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                   </ImageView>
-                  <Label contentDisplay="CENTER" prefHeight="18.0" prefWidth="41.0" text="Vs.">
+                  <Label contentDisplay="CENTER" prefHeight="18.0" prefWidth="34.0" text=" VS">
                      <HBox.margin>
-                        <Insets top="100.0" />
+                        <Insets left="10.0" top="100.0" />
                      </HBox.margin>
                      <padding>
                         <Insets left="10.0" right="10.0" />
                      </padding>
                   </Label>
-                  <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="pictureActiveRPCAI" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                   </ImageView>
                   <VBox prefHeight="200.0" prefWidth="110.0">
                      <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="152.0" text="Robot name" textAlignment="CENTER" />
-                        <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                        <Label fx:id="lableAIName" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="152.0" text="Robot name" textAlignment="CENTER">
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin></Label>
+                        <ImageView fx:id="pictureAI" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@/Pictures/2B.png" />
                            </image>
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
                         </ImageView>
-                        <MFXTextField alignment="TOP_CENTER" prefHeight="67.0" prefWidth="150.0" text="Textbox" />
+                        <MFXTextField fx:id="textAI" alignment="TOP_CENTER" prefHeight="67.0" prefWidth="150.0" text="Textbox">
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin></MFXTextField>
                      </children>
                   </VBox>
                </children>
                <BorderPane.margin>
-                  <Insets left="10.0" />
+                  <Insets />
                </BorderPane.margin>
             </HBox>
          </center>
          <top>
             <VBox prefHeight="80.0" prefWidth="600.0" BorderPane.alignment="TOP_CENTER">
                <children>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6383a1" height="50.0" stroke="BLACK" strokeType="INSIDE" width="200.0">
-                     <VBox.margin>
-                        <Insets bottom="5.0" left="250.0" right="250.0" top="10.0" />
-                     </VBox.margin>
-                  </Rectangle>
+                  <HBox prefHeight="35.0" prefWidth="700.0">
+                     <children>
+                        <Label alignment="CENTER" contentDisplay="CENTER" text="Score: " textAlignment="CENTER">
+                           <HBox.margin>
+                              <Insets left="320.0" top="10.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label fx:id="lableScore" text="0 - 0">
+                           <HBox.margin>
+                              <Insets top="10.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
                   <Line endX="600.0" startX="-100.0" />
                </children>
             </VBox>
