--- a/src/rps/gui/view/style.css
+++ b/src/rps/gui/view/style.css
@@ -9,9 +9,14 @@
     -fx-scale-z: 1.0;
 }
 
+.image-view-fixed{
+    -fx-scale-x: 0.8;
+    -fx-scale-y: 0.8;
+    -fx-scale-z: 0.8;
+}
+
 .image-view-hover:hover {
     -fx-scale-x: 1.2;
     -fx-scale-y: 1.2;
     -fx-scale-z: 1.2;
 }
-
