--- a/src/rps/gui/view/style.css
+++ b/src/rps/gui/view/style.css
@@ -3,6 +3,13 @@
     -fx-text-fill: #000000;
     -fx-font-family: "Courier New";
 }
+
+.label-score {
+    -fx-font-size: 30pt;
+    -fx-text-fill: #000000;
+    -fx-font-family: "Courier New";
+}
+
 .image-view-normal:hover{
     -fx-scale-x: 1.0;
     -fx-scale-y: 1.0;
